--- a/CLIENT/GUI/editorWindow/ui/gui_editor.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_editor.ui
@@ -18,7 +18,7 @@
 	background-color: qlineargradient(spread:reflect, x1:0.5, y1:0, x2:0.5, y2:1, stop:0 rgba(25, 30, 28, 120), stop:1 rgba(0, 0, 0, 0));
 }</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="10,1,80,0">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="9,1,80,1,0">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -71,7 +71,10 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,3,1">
+    <layout class="QHBoxLayout" name="horizontalLayout" stretch="4,7,4">
+     <property name="spacing">
+      <number>0</number>
+     </property>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
@@ -86,17 +89,8 @@
       </spacer>
      </item>
      <item>
-      <widget class="QWidget" name="textWidget" native="true">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="autoFillBackground">
-        <bool>false</bool>
-       </property>
-       <layout class="QGridLayout" name="gridLayout_2">
+      <widget class="QWidget" name="widget_3" native="true">
+       <layout class="QGridLayout" name="gridLayout" rowstretch="1,120,1" columnstretch="1,120,1">
         <property name="leftMargin">
          <number>0</number>
         </property>
@@ -109,6 +103,92 @@
         <property name="bottomMargin">
          <number>0</number>
         </property>
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <item row="0" column="1">
+         <widget class="QWidget" name="widget_6" native="true">
+          <property name="styleSheet">
+           <string notr="true">background-color: qlineargradient(spread:reflect, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(25, 30, 28, 120), stop:1 rgba(0, 0, 0, 0));</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QWidget" name="widget_2" native="true">
+          <property name="styleSheet">
+           <string notr="true">background-color: qlineargradient(spread:reflect, x1:1, y1:0.5, x2:0, y2:0.5, stop:0 rgba(25, 30, 28, 120), stop:1 rgba(0, 0, 0, 0));</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QWidget" name="textWidget" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="autoFillBackground">
+           <bool>false</bool>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_2">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+          </layout>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QWidget" name="widget_4" native="true">
+          <property name="styleSheet">
+           <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0.5, x2:1, y2:0.5, stop:0 rgba(25, 30, 28, 120), stop:1 rgba(0, 0, 0, 0));</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QWidget" name="widget_5" native="true">
+          <property name="styleSheet">
+           <string notr="true">background-color: qradialgradient(spread:reflect, cx:0.5, cy:0, radius:1.6, fx:0.5, fy:0, stop:0 rgba(25, 30, 28, 120), stop:1 rgba(0, 0, 0, 0));</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QWidget" name="widget" native="true">
+          <property name="styleSheet">
+           <string notr="true">background-color: qradialgradient(spread:reflect, cx:1, cy:1, radius:1.5, fx:1, fy:1, stop:0 rgba(25, 30, 28, 120), stop:0.6 rgba(0, 0, 0, 0));</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QWidget" name="widget_7" native="true">
+          <property name="styleSheet">
+           <string notr="true">background-color: qradialgradient(spread:reflect, cx:0, cy:1, radius:1.5, fx:0, fy:1, stop:0 rgba(25, 30, 28, 120), stop:0.6 rgba(0, 0, 0, 0));</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QWidget" name="widget_8" native="true">
+          <property name="styleSheet">
+           <string notr="true">background-color: qradialgradient(spread:reflect, cx:1, cy:0, radius:1.5, fx:1, fy:0, stop:0 rgba(25, 30, 28, 120), stop:0.6 rgba(0, 0, 0, 0));</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2">
+         <widget class="QWidget" name="widget_9" native="true">
+          <property name="styleSheet">
+           <string notr="true">background-color: qradialgradient(spread:reflect, cx:0, cy:0, radius:1.5, fx:0, fy:0, stop:0 rgba(25, 30, 28, 120), stop:0.6 rgba(0, 0, 0, 0));</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
      </item>
@@ -126,6 +206,24 @@
       </spacer>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QWidget" name="dividerWidget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_4">
+      <property name="spacing">
+       <number>6</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+     </layout>
+    </widget>
    </item>
    <item>
     <widget class="QWidget" name="usersBarWidget" native="true">
