--- a/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_toolsbar.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>963</width>
+    <width>982</width>
     <height>70</height>
    </rect>
   </property>
@@ -20,6 +20,67 @@
 
 #line_2,#line_3,#line_4,#line_5{
 background-color: rgb(203, 240, 251);
+}
+
+QPushButton {
+	height: 24px;
+	width: 28px;
+    background-color: hsv(165, 55, 255);
+    border-width: 1px;
+	border-style: outset;
+	border-color: hsv(165, 55, 205);
+}
+
+QPushButton:hover:!pressed{
+	border-color: hsv(165, 255, 255);
+	border-top-color: hsv(165, 200, 255);	
+	border-left-color: hsv(165, 200, 255);
+}
+
+QPushButton:pressed{
+    border-style: inset;
+	background-color: hsv(165, 55, 220);
+}
+
+QFontComboBox{
+    border-width: 1px;
+	border-style: inset;
+	border-color: hsv(165, 55, 205);
+}
+
+QComboBox::down-arrow {
+	image: url(:/widgets_parts/widgets_parts/arrowdown.png);
+}
+
+QComboBox::drop-down {
+	background-color: white;
+	border: 0px;
+}
+
+QSpinBox{
+    border-width: 1px;
+	border-style: inset;
+	border-color: hsv(165, 55, 205);
+}
+
+QSpinBox::down-arrow {
+	image: url(:/widgets_parts/widgets_parts/arrow-down.png);
+}
+
+QSpinBox::up-arrow {
+	image: url(:/widgets_parts/widgets_parts/arrow-up.png);
+}
+
+QSpinBox::down-button,QSpinBox::up-button {
+	background-color: hsv(165, 55, 255);
+    border-width: 1px;
+	border-style: outset;
+	border-color: hsv(165, 55, 205);
+}
+
+QSpinBox::down-button:pressed,QSpinBox::up-button:pressed {
+	border-style: inset;
+	background-color: hsv(165, 55, 220);
 }</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
@@ -114,6 +175,33 @@ background-color: rgb(203, 240, 251);
                 </color>
                </brush>
               </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
              </active>
              <inactive>
               <colorrole role="WindowText">
@@ -125,6 +213,33 @@ background-color: rgb(203, 240, 251);
                 </color>
                </brush>
               </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
              </inactive>
              <disabled>
               <colorrole role="WindowText">
@@ -133,6 +248,33 @@ background-color: rgb(203, 240, 251);
                  <red>120</red>
                  <green>120</green>
                  <blue>120</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
                 </color>
                </brush>
               </colorrole>
@@ -207,6 +349,33 @@ background-color: rgb(203, 240, 251);
                 </color>
                </brush>
               </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
              </active>
              <inactive>
               <colorrole role="WindowText">
@@ -218,6 +387,33 @@ background-color: rgb(203, 240, 251);
                 </color>
                </brush>
               </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
              </inactive>
              <disabled>
               <colorrole role="WindowText">
@@ -226,6 +422,33 @@ background-color: rgb(203, 240, 251);
                  <red>120</red>
                  <green>120</green>
                  <blue>120</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
                 </color>
                </brush>
               </colorrole>
@@ -314,6 +537,33 @@ background-color: rgb(203, 240, 251);
                 </color>
                </brush>
               </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
              </active>
              <inactive>
               <colorrole role="WindowText">
@@ -325,6 +575,33 @@ background-color: rgb(203, 240, 251);
                 </color>
                </brush>
               </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
              </inactive>
              <disabled>
               <colorrole role="WindowText">
@@ -333,6 +610,33 @@ background-color: rgb(203, 240, 251);
                  <red>120</red>
                  <green>120</green>
                  <blue>120</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
                 </color>
                </brush>
               </colorrole>
@@ -421,6 +725,33 @@ background-color: rgb(203, 240, 251);
                 </color>
                </brush>
               </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
              </active>
              <inactive>
               <colorrole role="WindowText">
@@ -432,6 +763,33 @@ background-color: rgb(203, 240, 251);
                 </color>
                </brush>
               </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
              </inactive>
              <disabled>
               <colorrole role="WindowText">
@@ -440,6 +798,33 @@ background-color: rgb(203, 240, 251);
                  <red>120</red>
                  <green>120</green>
                  <blue>120</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Button">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Base">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
+                </color>
+               </brush>
+              </colorrole>
+              <colorrole role="Window">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>203</red>
+                 <green>240</green>
+                 <blue>251</blue>
                 </color>
                </brush>
               </colorrole>
