Some minor fixes
Ho sistemato un po' di cose, tipo alcuni focus, palette, spinbox ed altre cosucce

--- a/CLIENT/GUI/editorWindow/ui/gui_editorwindow.ui
+++ b/CLIENT/GUI/editorWindow/ui/gui_editorwindow.ui
@@ -27,6 +27,9 @@
     <property name="bottomMargin">
      <number>0</number>
     </property>
+    <item row="0" column="0">
+     <widget class="QTextEdit" name="textEdit"/>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
