--- a/CLIENT/GUI/ui/gui_opendoc.ui
+++ b/CLIENT/GUI/ui/gui_opendoc.ui
@@ -20,7 +20,27 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" rowspan="6">
+   <item row="5" column="1">
+    <widget class="QPushButton" name="forgetPushButton">
+     <property name="text">
+      <string>Forget</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <spacer name="verticalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>85</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="0" rowspan="7">
     <widget class="QListWidget" name="docsListWidget"/>
    </item>
    <item row="0" column="1">
@@ -43,14 +63,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
-    <widget class="QPushButton" name="getURIPushButton">
-     <property name="text">
-      <string>Get URI</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
+   <item row="4" column="1">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -63,25 +76,19 @@
      </property>
     </spacer>
    </item>
-   <item row="4" column="1">
-    <widget class="QPushButton" name="forgetPushButton">
+   <item row="2" column="1">
+    <widget class="QPushButton" name="getURIPushButton">
      <property name="text">
-      <string>Forget</string>
+      <string>Get URI</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
-    <spacer name="verticalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+   <item row="3" column="1">
+    <widget class="QPushButton" name="exportPDFPushButton">
+     <property name="text">
+      <string>Export PDF</string>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>85</height>
-      </size>
-     </property>
-    </spacer>
+    </widget>
    </item>
   </layout>
  </widget>
